VOL-3202 fix for modal box spacing

--- a/app/cdn/assets/_styles/components/modal.scss
+++ b/app/cdn/assets/_styles/components/modal.scss
@@ -112,7 +112,7 @@
   .modal,
   .modal--alert {
     border-radius: 3px;
-    padding: 0 0 $gutter * 1.5;
+    padding: 0 0 0 0;
     &__title {
       @extend %h4;
     }
